--- a/coba.ipynb
+++ b/coba.ipynb
@@ -36,6 +36,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Project\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Final Project\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
