--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[514 rows x 10 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -397,62 +397,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8349514563106796\n",
-      "Confusion Matrix:\n",
-      "[[ 5  0  0  0  1  0]\n",
-      " [ 1  3  0  0  0  0]\n",
-      " [ 0  0  4  3  0  1]\n",
-      " [ 0  0  0  4  3  1]\n",
-      " [ 0  0  0  1 16  4]\n",
-      " [ 0  0  0  0  2 54]]\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.83      0.83      0.83         6\n",
-      "           2       1.00      0.75      0.86         4\n",
-      "           3       1.00      0.50      0.67         8\n",
-      "           4       0.50      0.50      0.50         8\n",
-      "           5       0.73      0.76      0.74        21\n",
-      "           6       0.90      0.96      0.93        56\n",
-      "\n",
-      "    accuracy                           0.83       103\n",
-      "   macro avg       0.83      0.72      0.76       103\n",
-      "weighted avg       0.84      0.83      0.83       103\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Membuat model SVM\n",
-    "svm_model = SVC(kernel='rbf', C=1.0, gamma='scale', random_state=42)\n",
-    "\n",
-    "# Melatih model\n",
-    "svm_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Memprediksi nilai target pada data pengujian\n",
-    "y_pred = svm_model.predict(X_test)\n",
-    "\n",
-    "# Evaluasi performa model\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-    "classification_rep = classification_report(y_test, y_pred)\n",
-    "\n",
-    "# Menampilkan hasil evaluasi\n",
-    "print(f'Accuracy: {accuracy}')\n",
-    "print(f'Confusion Matrix:\\n{conf_matrix}')\n",
-    "print(f'Classification Report:\\n{classification_rep}')"
+    "# import pickle\n",
+    "# pickle_out = open(\"svm.pkl\", mode= \"wb\")\n",
+    "# pickle.dump(svm_model,pickle_out)\n",
+    "# pickle_out.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
