--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[514 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,40 +268,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Memisahkan data menjadi data pelatihan dan data pengujian\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Normalisasi fitur menggunakan StandardScaler\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n"
+    "X_test = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "# Membuat model SVM\n",
+    "svm_model = SVC(kernel='rbf', C=1.0, gamma='scale', random_state=42)\n",
     "\n",
     "# Melatih model\n",
-    "model.fit(X_train, y_train)\n",
+    "svm_model.fit(X_train, y_train)\n",
     "\n",
     "# Memprediksi nilai target pada data pelatihan dan data pengujian\n",
-    "y_train_pred = model.predict(X_train)\n",
-    "y_test_pred = model.predict(X_test)"
+    "y_train_pred = svm_model.predict(X_train)\n",
+    "y_test_pred = svm_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -309,27 +308,27 @@
      "output_type": "stream",
      "text": [
       "Evaluasi pada Data Pelatihan:\n",
-      "Accuracy: 0.829683698296837\n",
+      "Accuracy: 0.8880778588807786\n",
       "Confusion Matrix:\n",
       "[[ 20   0   0   0   0   0]\n",
-      " [  0  10   2   0   0   0]\n",
-      " [  0   1  16   4   2   1]\n",
-      " [  0   0   2  21  10   7]\n",
-      " [  0   0   0   2  55  30]\n",
-      " [  0   0   0   0   9 219]]\n",
+      " [  0   9   3   0   0   0]\n",
+      " [  0   0  19   2   1   2]\n",
+      " [  0   0   0  24  10   6]\n",
+      " [  0   0   0   0  68  19]\n",
+      " [  0   0   0   0   3 225]]\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1       1.00      1.00      1.00        20\n",
-      "           2       0.91      0.83      0.87        12\n",
-      "           3       0.80      0.67      0.73        24\n",
-      "           4       0.78      0.53      0.63        40\n",
-      "           5       0.72      0.63      0.67        87\n",
-      "           6       0.85      0.96      0.90       228\n",
+      "           2       1.00      0.75      0.86        12\n",
+      "           3       0.86      0.79      0.83        24\n",
+      "           4       0.92      0.60      0.73        40\n",
+      "           5       0.83      0.78      0.80        87\n",
+      "           6       0.89      0.99      0.94       228\n",
       "\n",
-      "    accuracy                           0.83       411\n",
-      "   macro avg       0.84      0.77      0.80       411\n",
-      "weighted avg       0.82      0.83      0.82       411\n",
+      "    accuracy                           0.89       411\n",
+      "   macro avg       0.92      0.82      0.86       411\n",
+      "weighted avg       0.89      0.89      0.88       411\n",
       "\n"
      ]
     }
@@ -349,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -358,27 +357,27 @@
      "text": [
       "\n",
       "Evaluasi pada Data Pengujian:\n",
-      "Accuracy: 0.7766990291262136\n",
+      "Accuracy: 0.8349514563106796\n",
       "Confusion Matrix:\n",
       "[[ 5  0  0  0  1  0]\n",
-      " [ 1  2  1  0  0  0]\n",
-      " [ 0  0  4  2  1  1]\n",
-      " [ 0  0  1  4  2  1]\n",
-      " [ 0  0  0  2 12  7]\n",
-      " [ 0  0  0  0  3 53]]\n",
+      " [ 1  3  0  0  0  0]\n",
+      " [ 0  0  4  3  0  1]\n",
+      " [ 0  0  0  4  3  1]\n",
+      " [ 0  0  0  1 16  4]\n",
+      " [ 0  0  0  0  2 54]]\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1       0.83      0.83      0.83         6\n",
-      "           2       1.00      0.50      0.67         4\n",
-      "           3       0.67      0.50      0.57         8\n",
+      "           2       1.00      0.75      0.86         4\n",
+      "           3       1.00      0.50      0.67         8\n",
       "           4       0.50      0.50      0.50         8\n",
-      "           5       0.63      0.57      0.60        21\n",
-      "           6       0.85      0.95      0.90        56\n",
+      "           5       0.73      0.76      0.74        21\n",
+      "           6       0.90      0.96      0.93        56\n",
       "\n",
-      "    accuracy                           0.78       103\n",
-      "   macro avg       0.75      0.64      0.68       103\n",
-      "weighted avg       0.77      0.78      0.77       103\n",
+      "    accuracy                           0.83       103\n",
+      "   macro avg       0.83      0.72      0.76       103\n",
+      "weighted avg       0.84      0.83      0.83       103\n",
       "\n"
      ]
     }
@@ -398,7 +397,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle\n",
+    "# pickle_out = open(\"svm.pkl\", mode= \"wb\")\n",
+    "# pickle.dump(svm_model,pickle_out)\n",
+    "# pickle_out.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +431,7 @@
     "    user_input = scaler.transform([user_input])\n",
     "\n",
     "    # Melakukan prediksi\n",
-    "    prediction = model.predict(user_input)\n",
+    "    prediction = svm_model.predict(user_input)\n",
     "    return prediction[0]\n",
     "\n",
     "# Meminta input pengguna dan memberikan prediksi\n",
